integrated user roles

--- a/app/views/myAccount.scala.html
+++ b/app/views/myAccount.scala.html
@@ -22,8 +22,8 @@
 			<td>@user.lastName</td>
 		</tr>
 		<tr>
-			<td>@Messages("field.services")</td>
-			<td>@user.services.mkString(", ")</td>
+			<td>@Messages("field.role")</td>
+			<td>@user.role</td>
 		</tr>
 	</table>
 }
