--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,12 +2,7 @@
 
 @import views.html.tags.auth._
 @import controllers.routes
-
-@servicesString(user: User) = @{ user.services match {
-	case Nil => "none"
-	case head :: Nil => head
-	case init :+ last => init.mkString(", ") + " " + Messages("and") + " " + last
-}}
+@import models._
 
 @views.html.templates.default(title = "Home", loggedUser, tab = "index") {
 		
@@ -28,7 +23,7 @@
 			<li><span class="text-warning">master</span>: @Messages("index.example.master")</li>
 		</ul>
 		@loggedUser.map { user =>
-			<p class="lead">@Html(Messages("index.auth.status", s"""<span class="text-success">${user.fullName}</span>""", s"""<span class="text-info">${servicesString(user)}</span>"""))</p>
+			<p class="lead">@Html(Messages("index.auth.status", s"""<span class="text-success">${user.fullName}</span>""", s"""<span class="text-info">${user.role}</span>"""))</p>
 		}
 	
 		<table class="table table-striped table-hover">
@@ -54,12 +49,12 @@
 				<td><a href="@routes.Application.index">Index</a></td>
 			</tr>
 			<tr>
-				<td>Service A area</td>
-				<td>WithService("serviceA")</td>
+				<td>Guest area</td>
+				<td>forRole(UserRole.GUEST)</td>
 				<td><span class="text-info">service A</span> or <span class="text-warning">master</span></td>
 				@loggedUser.map { implicit user =>
 					<td>
-						@withServiceOrElse("serviceA") {
+						@forRoleOrElse(UserRole.USER) {
 							<span class="glyphicon glyphicon-ok"></span>
 						}{
 							<span class="glyphicon glyphicon-remove"></span>
@@ -69,12 +64,12 @@
 				<td><a href="@routes.Application.serviceA">Service A area</a></td>
 			</tr>
 			<tr>
-				<td>Service A || Service B</td>
-				<td>WithService("serviceA", "serviceB")</td>
+				<td>ADMIN ONLY</td>
+				<td>forRole(UserRole.ADMIN)</td>
 				<td>(<span class="text-info">service A</span> or <span class="text-info">service B</span>) or <span class="text-warning">master</span></td>
 				@loggedUser.map { implicit user =>
 					<td>
-						@withServiceOrElse("serviceA", "serviceB") {
+						@forRoleOrElse(UserRole.ADMIN) {
 							<span class="glyphicon glyphicon-ok"></span>
 						}{
 							<span class="glyphicon glyphicon-remove"></span>
@@ -85,11 +80,11 @@
 			</tr>
 			<tr>
 				<td>Service A && Service B</td>
-				<td><span class="text-primary">WithServices</span>("serviceA", "serviceB")</td>
+				<td><span class="text-primary">forRoles</span>UserRole.USER</td>
 				<td>(<span class="text-info">service A</span> and <span class="text-info">service B</span>) or <span class="text-warning">master</span></td>
 				@loggedUser.map { implicit user =>
 					<td>
-						@withServicesOrElse("serviceA", "serviceB") {
+						@forRoleOrElse(UserRole.USER) {
 							<span class="glyphicon glyphicon-ok"></span>
 						}{
 							<span class="glyphicon glyphicon-remove"></span>
@@ -100,11 +95,11 @@
 			</tr>
 			<tr>
 				<td>Settings area</td>
-				<td>WithService("master")</td>
+				<td>forRole(UserRole.MASTER)</td>
 				<td>only <span class="text-warning">master</span></td>
 				@loggedUser.map { implicit user =>
 					<td>
-						@withServiceOrElse("master") {
+						@forRoleOrElse(UserRole.MASTER) {
 							<span class="glyphicon glyphicon-ok"></span>
 						}{
 							<span class="glyphicon glyphicon-remove"></span>
