--- a/app/views/templates/main.scala.html
+++ b/app/views/templates/main.scala.html
@@ -8,8 +8,8 @@
 		<title>@title</title>
 		<link rel="shortcut icon" type="image/png" href="@routes.MyAssets.img("favicon.png")">
 		<link rel="stylesheet" media="screen" href="@routes.MyAssets.lib("bootstrap/css/bootstrap.min.css")">
-		<link rel="stylesheet" media="screen" href="@routes.MyAssets.css("main.css")">
-		<script data-main="@routes.MyAssets.js("main")" src="@routes.MyAssets.lib("requirejs/require.js")" type="text/javascript"></script>
+		<link rel="stylesheet" media="screen" href="/css/main.css">
+		<script data-main="@routes.MyAssets.js("main")" src="/lib/requirejs/require.js" type="text/javascript"></script>
 		@styles
 	</head>
 	<body>
