added delete functionality

--- a/app/views/editor/menu.scala.html
+++ b/app/views/editor/menu.scala.html
@@ -23,6 +23,7 @@
       </div>
       <div class="non-editable"><p><b>@Messages("created.by"):</b> @menu.author.fullName</p></div>
       <a class="editor-edit" href="#">@Messages("editor.edit")</a>
+      <a class="editor-delete" href="#">@Messages("editor.delete")</a>
     </li>
   }
   </ul>
