page record management

--- a/app/views/editor/page.scala.html
+++ b/app/views/editor/page.scala.html
@@ -32,6 +32,7 @@
       <div class="non-editable"><p><b>@Messages("created.by"):</b> @page.author.fullName</p></div>
       <a class="editor-edit" href="#">@Messages("editor.edit")</a>
       <a class="page editor-delete" href="#">@Messages("editor.delete")</a>
+      <p><a class="editor-edit-subnodes" href="/edit/record/@page.id.id/1">@Messages("editor.edit") @Messages("record.items")</a></p>
     </li>
   }
   </ul>
