--- a/app/views/auth/default.scala.html
+++ b/app/views/auth/default.scala.html
@@ -1,4 +1,4 @@
-@(title: String, loggedUser: Option[User] = None)(content: Html)(implicit messages: Messages)
+@(title: String, loggedUser: Option[User] = None)(content: Html)(implicit messages: Messages, menus: List[utils.services.data.Menu])
 @views.html.templates.default(title, loggedUser, withMainTabs = false) {
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3">
