--- a/app/views/auth/forgotPasswordSent.scala.html
+++ b/app/views/auth/forgotPasswordSent.scala.html
@@ -1,4 +1,4 @@
-@(email: String)(implicit messages: Messages)
+@(email: String)(implicit messages: Messages, menus: List[utils.services.data.Menu])
 @default("Reset Password") {
 	<p>@Messages("forgot.sent", email)</p>
 }
