--- a/app/views/auth/resetPassword.scala.html
+++ b/app/views/auth/resetPassword.scala.html
@@ -1,4 +1,4 @@
-@(tokenId: String, passwordsForm: Form[(String, String)])(implicit request: RequestHeader, messages: Messages)
+@(tokenId: String, passwordsForm: Form[(String, String)])(implicit request: RequestHeader, messages: Messages, menus: List[utils.services.data.Menu])
 @import b3.vertical.fieldConstructor
 @default("Reset Password") {
 	@tags.alertFromRequest(request, "error")
