--- a/app/views/auth/resetedPassword.scala.html
+++ b/app/views/auth/resetedPassword.scala.html
@@ -1,4 +1,4 @@
-@(user: User)(implicit messages: Messages)
+@(user: User)(implicit messages: Messages, menus: List[utils.services.data.Menu])
 @default("Reseted Password") {
 	<p>@Messages("forgot.reseted")</p>
 	<a href="@controllers.routes.Application.index">@Messages("go.index")</a>
