--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@()(implicit loggedUser: Option[User], messages: Messages)
+@()(implicit loggedUser: Option[User], messages: Messages, menus: List[utils.services.data.Menu])
 
 @import views.html.tags.auth._
 @import controllers.routes
