--- a/app/views/auth/changePassword.scala.html
+++ b/app/views/auth/changePassword.scala.html
@@ -1,4 +1,4 @@
-@(passwordsForm: Form[(String, String, String)])(implicit request: RequestHeader, messages: Messages)
+@(passwordsForm: Form[(String, String, String)])(implicit request: RequestHeader, messages: Messages, menus: List[utils.services.data.Menu])
 @import b3.vertical.fieldConstructor
 @import controllers.routes
 @default("Change Password") {
