--- a/app/views/auth/forgotPassword.scala.html
+++ b/app/views/auth/forgotPassword.scala.html
@@ -1,4 +1,4 @@
-@(emailForm: Form[String])(implicit request: RequestHeader, messages: Messages)
+@(emailForm: Form[String])(implicit request: RequestHeader, messages: Messages, menus: List[utils.services.data.Menu])
 @import b3.vertical.fieldConstructor
 @default("Forgot Password") {
 	@tags.alertFromRequest(request, "error")
