--- a/app/views/auth/signIn.scala.html
+++ b/app/views/auth/signIn.scala.html
@@ -1,4 +1,4 @@
-@(signInForm: Form[(String, String, Boolean)])(implicit request: RequestHeader, messages: Messages)
+@(signInForm: Form[(String, String, Boolean)])(implicit request: RequestHeader, messages: Messages, menus: List[utils.services.data.Menu])
 @import b3.vertical.fieldConstructor
 @import controllers.routes
 @default("Sign In") {
