--- a/app/views/auth/signUp.scala.html
+++ b/app/views/auth/signUp.scala.html
@@ -1,4 +1,4 @@
-@(signUpForm: Form[User])(implicit request: RequestHeader, messages: Messages)
+@(signUpForm: Form[User])(implicit request: RequestHeader, messages: Messages, menus: List[utils.services.data.Menu])
 @import b3.vertical.fieldConstructor
 @import controllers.routes
 @default("Sign Up") {
