--- a/app/views/editor/menu.scala.html
+++ b/app/views/editor/menu.scala.html
@@ -1,4 +1,4 @@
-@(menus: List[utils.services.data.Menu])(implicit user: User, messages: Messages)
+@()(implicit user: User, messages: Messages, menus: List[utils.services.data.Menu])
 
 @views.html.templates.logged(title = "menu editor", tab = "menu") {
   <h3>@Messages("menu.items"):</h3>
@@ -36,6 +36,7 @@
     <form name="menu-from" id="menu-form">
       <p class="hidden"><label for="id">ID</label> <input class="input" required="required" type="text" id="id" disabled="disabled" placeholder="id"/></p>
       <p id="order-wrapper"><label for="order">@Messages("display.order")</label> <input class="input" required="required" type="number" id="order" placeholder="@Messages("display.order")"/></p>
+      <p><label for="created">@Messages("created.at")</label> <input disabled="disabled"  class="input date" required="required" type="text" id="created" placeholder="@Messages("created.at")"/></p>
       <p><label for="title">@Messages("title")</label> <input class="input" required="required" type="text" id="title" placeholder="@Messages("title")"/></p>
       <p><label for="url">@Messages("url")</label> <input class="input" required="required" type="text" id="url" placeholder="@Messages("url")"/></p>
     </form>
