--- a/app/views/editor/page.scala.html
+++ b/app/views/editor/page.scala.html
@@ -1,4 +1,4 @@
-@(pages: List[utils.services.data.Page])(implicit user: User, messages: Messages)
+@(pages: List[utils.services.data.Page])(implicit user: User, messages: Messages, menus: List[utils.services.data.Menu])
 
 @views.html.templates.logged(title = "page editor", tab = "page") {
   <h3>@Messages("page.items"):</h3>
