--- a/app/views/editor/pageRecord.scala.html
+++ b/app/views/editor/pageRecord.scala.html
@@ -1,4 +1,4 @@
-@(records: List[utils.services.data.PageRecord], pageId: Int)(implicit user: User, messages: Messages)
+@(records: List[utils.services.data.PageRecord], pageId: Int)(implicit user: User, messages: Messages, menus: List[utils.services.data.Menu])
 
 @views.html.templates.logged(title = "page record editor", tab = "page records") {
   <h3>@Messages("record.items"):</h3>
