--- a/app/views/myAccount.scala.html
+++ b/app/views/myAccount.scala.html
@@ -1,4 +1,4 @@
-@()(implicit request: RequestHeader, user: User, messages: Messages)
+@()(implicit request: RequestHeader, user: User, messages: Messages, menus: List[utils.services.data.Menu])
 
 @import controllers.routes
 
