--- a/app/views/serviceA.scala.html
+++ b/app/views/serviceA.scala.html
@@ -1,4 +1,4 @@
-@()(implicit user: User, messages: Messages)
+@()(implicit user: User, messages: Messages, menus: List[utils.services.data.Menu])
 
 @import controllers.routes
 
