--- a/app/views/templates/default.scala.html
+++ b/app/views/templates/default.scala.html
@@ -1,4 +1,4 @@
-@(title: String, loggedUser: Option[User], withMainTabs: Boolean = true, tab: String = "", styles: Html = Html(""), scripts: Html = Html(""), modals: Html = Html(""))(content: Html)(implicit messages: Messages)
+@(title: String, loggedUser: Option[User], withMainTabs: Boolean = true, tab: String = "", styles: Html = Html(""), scripts: Html = Html(""), modals: Html = Html(""))(content: Html)(implicit messages: Messages, menus: List[utils.services.data.Menu])
 
 @import views.html.tags.auth._
 @import controllers.routes
@@ -14,16 +14,19 @@
 @navbarContent = {
 	@if(withMainTabs) {
 		<ul class="nav navbar-nav">
-			<li class="@("active".when(tab == "index"))"><a href="@routes.Application.index">@Messages("index.page")</a></li>
-			@loggedUser.map { implicit user =>
-				@forRole(UserRole.USER) {
-					<li class="@("active".when(tab == "serviceA"))"><a href="@routes.Application.serviceA">A</a></li>
-				}
-				@forRole(UserRole.MASTER) {
-					<li class="@("active".when(tab == "settings"))"><a href="@routes.Application.settings">Settings</a></li>
-				}
-				<li class="@("active".when(tab == "myaccount"))"><a href="@routes.Application.myAccount">@Messages("topbar.myaccount")</a></li>
+			@for(menu <- menus) {
+			<li><a href="@menu.url">@Messages(menu.title)</a></li>
 			}
+			<!--<li class="@("active".when(tab == "index"))"><a href="@routes.Application.index">@Messages("index.page")</a></li>-->
+			<!--@loggedUser.map { implicit user =>-->
+				<!--@forRole(UserRole.USER) {-->
+					<!--<li class="@("active".when(tab == "serviceA"))"><a href="@routes.Application.serviceA">A</a></li>-->
+				<!--}-->
+				<!--@forRole(UserRole.MASTER) {-->
+					<!--<li class="@("active".when(tab == "settings"))"><a href="@routes.Application.settings">Settings</a></li>-->
+				<!--}-->
+				<!--<li class="@("active".when(tab == "myaccount"))"><a href="@routes.Application.myAccount">@Messages("topbar.myaccount")</a></li>-->
+			<!--}-->
 		</ul>
 	}
 	<ul class="nav navbar-nav navbar-right">
