--- a/app/views/templates/logged.scala.html
+++ b/app/views/templates/logged.scala.html
@@ -1,2 +1,2 @@
-@(title: String, tab: String = "", styles: Html = Html(""), scripts: Html = Html(""), modals: Html = Html(""))(content: Html)(implicit loggedUser: User, messages: Messages)
-@default(title, loggedUser = Some(loggedUser), withMainTabs = true, tab, styles, scripts, modals)(content)(messages)
+@(title: String, tab: String = "", styles: Html = Html(""), scripts: Html = Html(""), modals: Html = Html(""))(content: Html)(implicit loggedUser: User, messages: Messages, menus: List[utils.services.data.Menu])
+@default(title, loggedUser = Some(loggedUser), withMainTabs = true, tab, styles, scripts, modals)(content)(messages, menus)
