--- a/app/views/templates/notLogged.scala.html
+++ b/app/views/templates/notLogged.scala.html
@@ -1,2 +1,2 @@
-@(title: String, tab: String = "", styles: Html = Html(""), scripts: Html = Html(""), modals: Html = Html(""))(content: Html)(implicit messages: Messages)
-@default(title, loggedUser = None, withMainTabs = true, tab, styles, scripts, modals)(content)(messages)
+@(title: String, tab: String = "", styles: Html = Html(""), scripts: Html = Html(""), modals: Html = Html(""))(content: Html)(implicit messages: Messages, menus: List[utils.services.data.Menu])
+@default(title, loggedUser = None, withMainTabs = true, tab, styles, scripts, modals)(content)(messages, menus)
