--- a/app/views/templates/default.scala.html
+++ b/app/views/templates/default.scala.html
@@ -22,9 +22,9 @@
 				<!--@forRole(UserRole.USER) {-->
 					<!--<li class="@("active".when(tab == "serviceA"))"><a href="@routes.Application.serviceA">A</a></li>-->
 				<!--}-->
-				<!--@forRole(UserRole.MASTER) {-->
-					<!--<li class="@("active".when(tab == "settings"))"><a href="@routes.Application.settings">Settings</a></li>-->
-				<!--}-->
+				@forRole(UserRole.ADMIN) {
+					<li><a href="@routes.EditorController.editorPage">@Messages("editor.title")</a></li>
+				}
 				<!--<li class="@("active".when(tab == "myaccount"))"><a href="@routes.Application.myAccount">@Messages("topbar.myaccount")</a></li>-->
 			<!--}-->
 		</ul>
