added rich statements, added js to chow cards, categories and statements

--- a/app/views/spendings/main_tracking.scala.html
+++ b/app/views/spendings/main_tracking.scala.html
@@ -3,75 +3,119 @@
 @views.html.templates.logged(title = "Content editor", tab = "editor") {
   <h2>@Messages("spendings.tracking")</h2>
   <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <form id="add-category" method="POST" class="form-vertical " role="form">
-        <fieldset>
-          <legend>@Messages("spendings.add.category")</legend>
-          <div class="form-group  " id="category-name_field">
-            <label class="control-label sr-only" for="category-name">@Messages("spendings.category.name")</label>
-            <input type="text" id="category-name" value="" class="form-control" placeholder="@Messages("spendings.category.name")">
-          </div>
-          <div class="form-group  " id="category-description_field">
-            <label class="control-label sr-only" for="category-name">@Messages("spendings.category.description")</label>
-            <input type="text" id="category-description" value="" class="form-control" placeholder="@Messages("spendings.category.description")">
-          </div>
-          <div class="form-group  " id="category-limit_field">
-            <label class="control-label sr-only" for="category-name">@Messages("spendings.category.limit")</label>
-            <input type="text" id="category-limit" value="" class="form-control" placeholder="@Messages("spendings.category.limit")">
-          </div>
-          <div class="form-group">
-            <button type="submit" class="btn btn-primary btn-block"> @Messages("submit")</button>
-          </div>
-        </fieldset>
-      </form>
+    <!--<div class="col-md-3 col-md-offset-3">-->
+    <div class="col-md-4">
+      <div id="spending-category" class="spending-tracking-form">
+        <table class="table table-striped table-hover">
+          <thead>
+            <tr>
+              <th>@Messages("spendings.category.name")</th>
+              <th>@Messages("spendings.category.description")</th>
+              <th>@Messages("spendings.category.limit")</th>
+            </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
+        <div><a href="#" class="add-new">@Messages("spendings.add.category")</a></div>
+        <form id="add-category" class="form-vertical hidden" role="form">
+          <fieldset>
+            <legend>@Messages("spendings.add.category")</legend>
+            <div class="form-group" id="category-name_field">
+              <label class="control-label sr-only" for="category-name">@Messages("spendings.category.name")</label>
+              <input type="text" id="category-name" value="" class="form-control" placeholder="@Messages("spendings.category.name")">
+            </div>
+            <div class="form-group  " id="category-description_field">
+              <label class="control-label sr-only" for="category-name">@Messages("spendings.category.description")</label>
+              <input type="text" id="category-description" value="" class="form-control" placeholder="@Messages("spendings.category.description")">
+            </div>
+            <div class="form-group  " id="category-limit_field">
+              <label class="control-label sr-only" for="category-name">@Messages("spendings.category.limit")</label>
+              <input type="number" id="category-limit" value="" class="form-control" placeholder="@Messages("spendings.category.limit")">
+            </div>
+            <div class="form-group">
+              <button type="submit" class="btn btn-primary btn-block"> @Messages("submit")</button>
+            </div>
+          </fieldset>
+        </form>
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <form id="add-card" method="POST" class="form-vertical " role="form">
-        <fieldset>
-          <legend>@Messages("spendings.add.card")</legend>
-          <div class="form-group  " id="card-name_field">
-            <label class="control-label sr-only" for="category-name">@Messages("spendings.card.name")</label>
-            <input type="text" id="card-name" value="" class="form-control" placeholder="@Messages("spendings.card.name")">
-          </div>
-          <div class="form-group  " id="card-vendor_field">
-            <label class="control-label sr-only" for="category-name">@Messages("spendings.card.vendor")</label>
-            <input type="text" id="card-vendor" value="" class="form-control" placeholder="@Messages("spendings.card.vendor")">
-          </div>
-          <div class="form-group  " id="card-description_field">
-            <label class="control-label sr-only" for="category-name">@Messages("spendings.card.description")</label>
-            <input type="text" id="category-card" value="" class="form-control" placeholder="@Messages("spendings.card.description")">
-          </div>
-          <div class="form-group  " id="card-available_field">
-            <label class="control-label sr-only" for="category-name">@Messages("spendings.card.available")</label>
-            <input type="text" id="card-available" value="" class="form-control" placeholder="@Messages("spendings.card.available")">
-          </div>
-          <div class="form-group  " id="card-total_field">
-            <label class="control-label sr-only" for="category-name">@Messages("spendings.card.total")</label>
-            <input type="text" id="card-total" value="" class="form-control" placeholder="@Messages("spendings.card.total")">
-          </div>
-          <div class="form-group">
-            <button type="submit" class="btn btn-primary btn-block"> @Messages("submit")</button>
-          </div>
-        </fieldset>
-      </form>
+
+    <div class="col-md-4">
+      <div id="spending-card" class="spending-tracking-form">
+        <table class="table table-striped table-hover">
+          <thead>
+          <tr>
+            <th>@Messages("spendings.card.vendor")</th>
+            <th>@Messages("spendings.card.name")</th>
+            <th>@Messages("spendings.card.description")</th>
+            <th>@Messages("spendings.card.available")</th>
+            <th>@Messages("spendings.card.total")</th>
+          </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
+        <div><a href="#" class="add-new">@Messages("spendings.add.card")</a></div>
+        <form id="add-card" method="POST" class="form-vertical hidden" role="form">
+          <fieldset>
+            <legend>@Messages("spendings.add.card")</legend>
+            <div class="form-group  " id="card-name_field">
+              <label class="control-label sr-only" for="category-name">@Messages("spendings.card.name")</label>
+              <input type="text" id="card-name" value="" class="form-control" placeholder="@Messages("spendings.card.name")">
+            </div>
+            <div class="form-group  " id="card-vendor_field">
+              <label class="control-label sr-only" for="category-name">@Messages("spendings.card.vendor")</label>
+              <input type="text" id="card-vendor" value="" class="form-control" placeholder="@Messages("spendings.card.vendor")">
+            </div>
+            <div class="form-group  " id="card-description_field">
+              <label class="control-label sr-only" for="category-name">@Messages("spendings.card.description")</label>
+              <input type="text" id="category-card" value="" class="form-control" placeholder="@Messages("spendings.card.description")">
+            </div>
+            <div class="form-group  " id="card-available_field">
+              <label class="control-label sr-only" for="category-name">@Messages("spendings.card.available")</label>
+              <input type="text" id="card-available" value="" class="form-control" placeholder="@Messages("spendings.card.available")">
+            </div>
+            <div class="form-group  " id="card-total_field">
+              <label class="control-label sr-only" for="category-name">@Messages("spendings.card.total")</label>
+              <input type="text" id="card-total" value="" class="form-control" placeholder="@Messages("spendings.card.total")">
+            </div>
+            <div class="form-group">
+              <button type="submit" class="btn btn-primary btn-block"> @Messages("submit")</button>
+            </div>
+          </fieldset>
+        </form>
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <form id="add-statement" method="POST" class="form-vertical " role="form">
-        <fieldset>
-          <legend>@Messages("spendings.add.statement")</legend>
-          <div class="form-group  " id="statement-amount_field">
-            <label class="control-label sr-only" for="category-name">@Messages("spendings.statement.amount")</label>
-            <input type="text" id="statement-amount" value="" class="form-control" placeholder="@Messages("spendings.statement.amount")">
-          </div>
-          <div class="form-group">
-            <button type="submit" class="btn btn-primary btn-block"> @Messages("submit")</button>
-          </div>
-        </fieldset>
-      </form>
+    <div class="col-md-4">
+      <div id="spending-statement" class="spending-tracking-form">
+        <table class="table table-striped table-hover">
+          <thead>
+          <tr>
+            <th>@Messages("spendings.card.vendor")</th>
+            <th>@Messages("spendings.card.name")</th>
+            <th>@Messages("spendings.card.description")</th>
+            <th>@Messages("spendings.card.available")</th>
+            <th>@Messages("spendings.card.total")</th>
+          </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
+        <div><a href="#" class="add-new">@Messages("spendings.add.card")</a></div>
+        <form id="add-statement" method="POST" class="form-vertical hidden" role="form">
+          <fieldset>
+            <legend>@Messages("spendings.add.statement")</legend>
+            <div class="form-group  " id="statement-amount_field">
+              <label class="control-label sr-only" for="category-name">@Messages("spendings.statement.amount")</label>
+              <input type="text" id="statement-amount" value="" class="form-control" placeholder="@Messages("spendings.statement.amount")">
+            </div>
+            <div class="form-group">
+              <button type="submit" class="btn btn-primary btn-block"> @Messages("submit")</button>
+            </div>
+          </fieldset>
+        </form>
+      </div>
     </div>
   </div>
 }
