--- a/app/views/templates/main.scala.html
+++ b/app/views/templates/main.scala.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" media="screen" href="@routes.MyAssets.lib("bootstrap/css/bootstrap.min.css")">
 		<link rel="stylesheet" media="screen" href="/css/main.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+		<script data-main="@routes.MyAssets.js("spendings")" src="/lib/requirejs/require.js" type="text/javascript"></script>
 		<script data-main="@routes.MyAssets.js("main")" src="/lib/requirejs/require.js" type="text/javascript"></script>
 		@styles
 	</head>
